--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,7 +49,7 @@
   <h2>Login</h2>
   <form id="loginForm">
     <div class="form-group">
-      <label for="username">Email:</label>
+      <label for="username">Username:</label>
       <input type="text" id="username" required>
     </div>
     <div class="form-group">
